https://github.com/panestiev/CarMarket.git

--- a/CarMarket.Web/Content/Site.css
+++ b/CarMarket.Web/Content/Site.css
@@ -7,6 +7,10 @@
     height: auto;
     display:grid;
 }
+ a {
+     text-decoration:none;
+     color: white;
+ }
 
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
