--- a/CarMarket.Web/Views/Home/Profile.cshtml
+++ b/CarMarket.Web/Views/Home/Profile.cshtml
@@ -56,6 +56,13 @@
                             {
                                 if (prop.GetCustomAttribute<DisplayAttribute>().GetOrder() != null)
                                 {
+                                    if (prop.Name == "Price")
+                                    {
+                                        <td>
+                                            <a href="/Home/ViewDetails/@type/@id">@prop.GetValue(item) лева</a>
+                                        </td>
+                                        continue;
+                                    }
                                     <td>
                                         <a href="/Home/ViewDetails/@type/@id">@prop.GetValue(item)</a>
                                     </td>
