--- a/CarMarket.Web/Views/Home/ViewMachines.cshtml
+++ b/CarMarket.Web/Views/Home/ViewMachines.cshtml
@@ -62,7 +62,7 @@
                             @foreach (var prop in sortedProperties)
                             {
                                 if (prop.GetCustomAttribute<DisplayAttribute>().GetOrder() != null)
-                                {
+                                    {
                                     if (prop.Name == "Price")
                                     {
                                         <td>
@@ -70,6 +70,27 @@
                                         </td>
                                         continue;
                                     }
+                                    if (prop.Name == "Km")
+                                    {
+                                        <td>
+                                            <a href="/Home/ViewDetails/@type/@id">@prop.GetValue(item) Km</a>
+                                        </td>
+                                        continue;
+                                    }
+                                    if (prop.Name == "HorsePower")
+                                    {
+                                        <td>
+                                            <a href="/Home/ViewDetails/@type/@id">@prop.GetValue(item) Hp</a>
+                                        </td>
+                                        continue;
+                                    }
+                                        if (prop.Name == "Cubage")
+                                        {
+                                            <td>
+                                                <a href="/Home/ViewDetails/@type/@id">@prop.GetValue(item) Cubage</a>
+                                            </td>
+                                            continue;
+                                        }
                                     <td>
                                         <a href="/Home/ViewDetails/@type/@id">@prop.GetValue(item)</a>
                                     </td>
