https://github.com/panestiev/CarMarket

--- a/CarMarket.Web/Views/Home/CreateAgricultural.cshtml
+++ b/CarMarket.Web/Views/Home/CreateAgricultural.cshtml
@@ -64,6 +64,14 @@
                 <td><input type="file" name="files" /></td>
             </tr>
             <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
                 <td><button type="submit" name="button" value="@MachineryTypeEnum.Agricultural">Create</button></td>
             </tr>
         </table>
