--- a/CarMarket.Web/Views/Home/CreateBoat.cshtml
+++ b/CarMarket.Web/Views/Home/CreateBoat.cshtml
@@ -124,6 +124,14 @@
                 <td><input type="file" name="files" /></td>
             </tr>
             <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
                 <td><button type="submit" name="button" value="@MachineryTypeEnum.Boat">Create</button></td>
             </tr>
         </table>
