--- a/CarMarket.Web/Views/Home/CreateCar.cshtml
+++ b/CarMarket.Web/Views/Home/CreateCar.cshtml
@@ -272,6 +272,14 @@
                 <td><input type="file" name="files" /></td>
             </tr>
             <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
                 <td><button type="submit" name="button" value="@MachineryTypeEnum.Car">Create</button></td>
             </tr>
         </table>
