--- a/CarMarket.Web/Views/Home/CreateConstruction.cshtml
+++ b/CarMarket.Web/Views/Home/CreateConstruction.cshtml
@@ -109,6 +109,14 @@
                 <td><input type="file" name="files" /></td>
             </tr>
             <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
                 <td><button type="submit" name="button" value="@MachineryTypeEnum.Construction">Create</button></td>
             </tr>
         </table>
