--- a/CarMarket.Web/Views/Home/CreateBus.cshtml
+++ b/CarMarket.Web/Views/Home/CreateBus.cshtml
@@ -280,6 +280,14 @@
                 <td><input type="file" name="files" /></td>
             </tr>
             <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
                 <td><button type="submit" name="button" value="@MachineryTypeEnum.Bus">Create</button></td>
             </tr>
         </table>
