--- a/CarMarket.Web/Views/Home/CreateCamper.cshtml
+++ b/CarMarket.Web/Views/Home/CreateCamper.cshtml
@@ -128,6 +128,14 @@
                 <td><input type="file" name="files" /></td>
             </tr>
             <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
                 <td><button type="submit" name="button" value="@MachineryTypeEnum.Camper">Create</button></td>
             </tr>
         </table>
