--- a/CarMarket.Web/Views/Home/CreateMoto.cshtml
+++ b/CarMarket.Web/Views/Home/CreateMoto.cshtml
@@ -134,6 +134,14 @@
                 <td><input type="file" name="files" /></td>
             </tr>
             <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
+                <td>Images</td>
+                <td><input type="file" name="files" /></td>
+            </tr>
+            <tr>
                 <td><button type="submit" name="button" value="@MachineryTypeEnum.Moto">Create</button></td>
             </tr>
         </table>
